#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT(Mutabor, 3.1.0-0pre1, mutabor@math.tu-dresden.de)
AC_CONFIG_SRCDIR([README])
AM_INIT_AUTOMAKE

AC_CONFIG_HEADER([config.h])

dnl PACKAGE=$PACKAGE_NAME
dnl VERSION=$PACKAGE_VERSION

AC_SUBST(PACKAGE)
AC_SUBST(VERSION)
AC_DEFINE_UNQUOTED(PACKAGE, "$PACKAGE", [Name of this package])
AC_DEFINE_UNQUOTED(VERSION, "$VERSION", [Version of this package])

AC_DEFINE_UNQUOTED(PACKAGE_BUGREPORT, "$PACKAGE_BUGREPORT",
                                      [address for reporting bugs])
AM_OPTIONS_WXCONFIG


dnl AH_TOP([
dnl /* We need this, because some autoconf tests rely on this (e.g. stpcpy)
dnl    and it should be used for new programs anyway */
dnl #define _GNU_SOURCE  1
dnl ])

AH_BOTTOM([
/* Debug also for Bison output. */
#ifdef DEBUG
#  define YYDEBUG 1
#endif

#define MUTWIN
#define WX
#define RTMIDI
#define __LINUX_ALSASEQ__
#define REUSE(x) x
])

AM_MAINTAINER_MODE
AC_ARG_ENABLE(debug,
	AS_HELP_STRING([--enable-debug],[Enable extra debugging functionality]),
	[AS_IF(test "$enableval" = yes,
	       AC_DEFINE(DEBUG,1,[Define to 1 for compiling in debug mode.]),
               AC_DEFINE_UNQUOTED(DEBUG,[$enableval]))
])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_ARG_ENABLE(ansi,
	AS_HELP_STRING([--enable-ansi],[Enable strict ansi compiling and warnings]),
	[AS_IF(test "$enableval" = yes,
	       AC_DEFINE(ANSI,1,[Define to 1 for compiling in ansi mode.]),
               AC_DEFINE_UNQUOTED(DEBUG,[$enableval]))
	 AX_CXXFLAGS_WARN_ALL_ANSI
	 AX_CFLAGS_WARN_ALL_ANSI
])
AM_PROG_LEX
AC_PROG_YACC
AC_PROG_LIBTOOL
AC_PROG_INSTALL
AC_PROG_LN_S

# Checks for libraries.
AC_CHECK_LIB(m,pow)
AM_PATH_ALSA(1.0.0)
AM_PATH_WXCONFIG(2.3.4, wxWin=1)
if test "$wxWin" != 1; then
         AC_MSG_ERROR([
                wxWindows must be installed on your system
                but wx-config script couldn't be found.
     
                Please check that wx-config is in path, the directory
                where wxWindows libraries are installed (returned by
                'wx-config --libs' command) is in LD_LIBRARY_PATH or
                equivalent variable and wxWindows version is 2.3.4 or above.
        ])
fi


# Checks for header files.
AC_CHECK_HEADERS([limits.h stddef.h math.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T

# Checks for library functions.
AC_FUNC_MALLOC
AC_CHECK_FUNCS([memmove pow]) 
AC_CHECK_FUNC(strdup)

AC_CONFIG_FILES([Makefile includes/Makefile includes/mutabor/Makefile libmutabor/Makefile libmutabor/tests/Makefile])
AC_OUTPUT


